# Codewars

rust/: .gitignore  Cargo.toml
rust/alphabet_position/: Cargo.toml
rust/alphabet_position/src/: main.rs
rust/delete_nth/: Cargo.toml
rust/exes_and_ohs/: Cargo.toml
rust/multiples_of_three_and_five/: Cargo.toml
rust/reverse_words/: Cargo.toml
rust/reverse_words/src/: lib.rs
rust/reverse_words/tests/: tests.rs
rust/roman_numerals_encoder/src/: main.rs
rust/round_to_next_5/: Cargo.toml
