[workspace]

members = [
    "multiply",
    "reverse_words",
    "square_sum",
    "multiples_of_three_and_five",
    "alphabet_position",
    "complementary_dna",
    "exes_and_ohs",
    "delete_nth",
    "directions_reduction",
    "split_strings",
    "roman_numerals_encoder",
    "round_to_next_5"
]